            Bugfix: OSDMenuInfoBox and OSDMenuMessageBox do not bite holes into OSDMenu
2010-03-30  Added a color picker dialog
            Added a color patch to the OSDMenu dialog. This displays an icon with a specific color
            Added a color picker demo
2010-03-31  The number of OSDMenu items is not limited to 100 entries any more
2010-04-01  Ported HDD_TAP_Disable(), HDD_TAP_DisableAll(), HDD_TAP_isDisabled() and HDD_TAP_isDisabledAll()
2010-04-02  'Official release'

2010-04-03  Increased STDSTRINGSIZE from 64 to 80
2010-04-11  Added HDD_TAP_GetFileNameByIndex()
2010-04-14  Added the parameter SuppressOSDSync to OSDMenuUpdate(). If set to true, the calling TAP may
              add some graphics but needs to do the TAP_Osd_Sync()
2010-04-28  Replaced reserved2 in tRECHeaderTMS with DurationSec
            Replaced HeaderUnknown3 in tRECHeaderInfo with HeaderDurationSec
2010-05-25  Bugfix: text output of DumpMemory() moved to the correct column if (size mod BytesPerLine) != 0
            Added: HDD_GetFileSizeAndInode()
            Added: GetApplVer() returns a pointer to a version string as seen in the information menu

2010-05-26  Version 1.08 of the TMS firmware introduces the UTF-8 encoding of the file system. While the TAP API is transparent
              to this modification, all Linux commands, which access the files on the drive, needed to be modified.
              Added: CharToUTF8(), StrToUTF8()
              Fixed: HDD_GetFileSizeAndInode(), HDD_RemoveDir(), HDD_GetInodeByAbsFileName(), HDD_GetFileTimeByAbsFileName(), HDD_Move()
            Added: StrMkUTF8()
2010-05-28  Added: Unix2TFTime()
2010-07-01  Added: LangGetStringDefault()
2010-07-06  Added: StrToISO(), StrMkISO() and CharToISO()
            Fixed: HDD_GetAbsolutePathByTypeFile() wasn't UTF8 aware. This should fix all functions, which depend
                   on this routine: HDD_TAP_GetIDByIndex(), HDD_GetInodeByTypeFile(), HDD_GetFileTimeByTypeFile()